# openpilot-dependencies

./: .gitignore  README.md  _shim_setup.py  build.sh  build_wheels.sh  pyproject.toml  release.sh  setup.sh  smoketest.sh  test.sh  test_wheels_in_image.sh
.github/workflows/: ci.yml  release.yml  test.yml
acados/: build.sh  pyproject.toml  setup.py
acados/acados/: __init__.py
bootstrap-icons/: build.sh  pyproject.toml  setup.py
bootstrap-icons/bootstrap_icons/: __init__.py
bzip2/: build.sh  pyproject.toml  setup.py
bzip2/bzip2/: __init__.py
capnproto/: build.sh  pyproject.toml  setup.py
capnproto/capnproto/: __init__.py
catch2/: build.sh  pyproject.toml  setup.py
catch2/catch2/: __init__.py
cppcheck/: build.sh  pyproject.toml  setup.py
cppcheck/cppcheck/: __init__.py
eigen/: build.sh  pyproject.toml  setup.py
eigen/eigen/: __init__.py
ffmpeg/: build.sh  pyproject.toml  setup.py
ffmpeg/ffmpeg/: __init__.py
gcc-arm-none-eabi/: build.sh  pyproject.toml  setup.py
gcc-arm-none-eabi/gcc_arm_none_eabi/: __init__.py
git/: build.sh  pyproject.toml  setup.py
git-lfs/: build.sh  pyproject.toml  setup.py
git-lfs/git_lfs/: __init__.py
git/git/: __init__.py
imgui/: build.sh  pyproject.toml  setup.py
imgui/imgui/: __init__.py
json11/: build.sh  pyproject.toml  setup.py
json11/json11/: __init__.py
libjpeg/: build.sh  pyproject.toml  setup.py
libjpeg/libjpeg/: __init__.py
libusb/: build.sh  pyproject.toml  setup.py
libusb/libusb/: __init__.py
libyuv/: build.sh  pyproject.toml  setup.py
libyuv/libyuv/: __init__.py
mdbook/: build.sh  pyproject.toml  setup.py
mdbook/mdbook/: __init__.py
nanosvg/: build.sh  pyproject.toml  setup.py
nanosvg/nanosvg/: __init__.py
ncurses/: build.sh  pyproject.toml  setup.py
ncurses/ncurses/: __init__.py
openssl/: build.sh  pyproject.toml
openssl/openssl3/: __init__.py
openssl3/: build.sh  pyproject.toml  setup.py
python3-dev/: build.sh  pyproject.toml  setup.py
python3-dev/python3_dev/: __init__.py
qt5/: build.sh  pyproject.toml  setup.py
qt5/qt5/: __init__.py
raylib/: .gitignore  build.sh  build_cffi.py  pyproject.toml  setup.py  validate_bindings.py
raylib/raylib/: __init__.py  _backend.py  build.py  defines.py  enums.py  version.py
xvfb/: build.sh  pyproject.toml  setup.py
xvfb/xvfb/: __init__.py
zeromq/: build.sh  pyproject.toml  setup.py
zeromq/zeromq/: __init__.py
zstd/: build.sh  pyproject.toml  setup.py
zstd/zstd/: __init__.py
