[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acados"
version = "0.2.2"
description = "acados solvers + Python interface, with a slimmed casadi vendored alongside"
requires-python = ">=3.8"
dependencies = [
  # the vendored casadi.py shim imports numpy at module load time
  "numpy",
]

# `find` runs at setup() init time, before build.sh creates these dirs, so
# enumerate packages explicitly. acados.acados_template + casadi.tools are
# subpackages and ship via package-data.
[tool.setuptools]
packages = ["acados", "casadi"]

[tool.setuptools.package-data]
acados = ["install/**/*", "acados_template/**/*"]
casadi = ["**/*"]
