[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bzip2"
version = "1.0.8"
description = "bzip2 compression library (static build)"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
include = ["bzip2*"]

[tool.setuptools.package-data]
bzip2 = ["install/**/*"]
