[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eigen"
version = "3.4.0"
description = "Eigen C++ linear algebra headers"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
include = ["eigen*"]

[tool.setuptools.package-data]
eigen = ["install/**/*"]
