[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imgui"
version = "1.92.7"
description = "Dear ImGui + ImPlot + rlImGui (source distribution)"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
include = ["imgui*"]

[tool.setuptools.package-data]
imgui = ["install/**/*"]
