[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imgui"
version = "1.92.7"
description = "Dear ImGui + ImPlot + GLFW 3.4 (static)"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["imgui"]

[tool.setuptools.package-data]
imgui = ["install/**/*"]
