[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ncurses"
version = "6.5"
description = "ncurses terminal library (static build)"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
include = ["ncurses*"]

[tool.setuptools.package-data]
ncurses = ["install/**/*"]
