[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qt5"
version = "5.15.18"
description = "Qt 5.15 (QtBase + QtCharts)"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
include = ["qt5*"]

[tool.setuptools.package-data]
qt5 = ["install/**/*"]
