[build-system]
requires = ["setuptools>=64", "wheel", "cffi>=1.17.1"]
build-backend = "setuptools.build_meta"

[project]
name = "raylib"
version = "5.5.0.7"
description = "raylib + pyray Python bindings (commaai fork)"
requires-python = ">=3.8"
dependencies = ["cffi>=1.17.1"]

[tool.setuptools.packages.find]
include = ["raylib*", "pyray*"]

[tool.setuptools.package-data]
raylib = ["install/**/*", "_raylib_cffi*.so"]
