[build-system]
requires = ["setuptools>=70.1", "cffi>=1.17.1"]
build-backend = "setuptools.build_meta"

[project]
name = "raylib"
version = "6.0.0.0"
description = "raylib + pyray Python bindings (commaai fork)"
requires-python = ">=3.8"
dependencies = ["cffi>=1.17.1"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["raylib", "pyray"]
namespaces = false

[tool.setuptools.package-data]
raylib = ["_raylib_cffi*.so", "install/include/*.h", "install/lib/*.a"]
